fix viewport height on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,11 @@
 
 body {
   margin: 0;
+  height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 * {
